<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemImage"
            android:padding="5dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#3F51B5"/>

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:layout_marginTop="51dp"
            android:isIndicator="true"
            android:numStars="5"
            android:padding="5dp" />

        <TextView
            android:id="@+id/itemsubTitle"
            android:layout_width="255dp"
            android:layout_height="106dp"
            android:layout_below="@+id/ratingBar"
            android:padding="5dp"
            android:text="@string/sub"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemsubTitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-7dp"
            android:backgroundTint="#3F51B5"
            android:onClick="cancel"
            android:text="@string/delete" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/delete"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="register"
                android:text="@string/price" />
            <Button
                android:id="@+id/cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:layout_marginStart="22dp"
                android:backgroundTint="#3F51B5"
                android:onClick="cancel"/>




        </LinearLayout>





    </RelativeLayout>

</androidx.cardview.widget.CardView>